--- a/surface.html
+++ b/surface.html
@@ -28,8 +28,8 @@
             <div class="overlay-text">
                 <div class="overlay-text-container">
                     <h2>Un ordinateur portable</h2>
-                    <p>Des tas d'onglets Google sont restés ouverts.<br><br>
-                        La mémoire du PC semble presque pleine.<br><br>
+                    <p>Le PC n'a pas été verrouillé.<br><br>
+                        Des tas d'onglets Google sont restés ouverts.<br><br>
                         En fouillant un peu, vous tombez sur un fichier .mp4
                     </p>
                     <button id="openVideoButton" class="video-btn">VOUS OUVREZ LE FICHIER</button>
