--- a/backroom2.html
+++ b/backroom2.html
@@ -26,15 +26,15 @@
         <div class="overlay-content">
             <span id="closeCameraOverlay" class="close-btn close-overlay"><img src="./icones/back.png" alt="Bouton retour"></span>
             
-            <div class="overlay-item-image">
-                <img src="./images/phone_detail.png" alt="Un téléphone rayé">
+            <div class="camera-detail overlay-item-image">
+                <img src="./images/camera_detail.png" alt="Un téléphone rayé">
             </div>
 
             <div class="overlay-text">
                 <div class="overlay-text-container">
-                    <h2>Un smartphone rayé</h2>
-                    <p>La batterie est presque vide.<br><br>
-                        Lorsque vous l’allumez,<br>pas de mot de passe.<br><br>
+                    <h2>Un vieux caméscope</h2>
+                    <p>L’objectif est cassé, mais l’écran fonctionne encore.<br><br>
+                        La carte SD est pleine.<br><br>
                         Vous tombez directement<br>sur une vidéo.
                     </p>
                     <button id="openVideoButton" class="video-btn">VOUS LANCEZ LA VIDÉO</button>
